--- a/jbase/src/main/res/values/colors.xml
+++ b/jbase/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="app_theme">#FF4081</color>
+    <color name="colorAccent">#ee4433</color>
+    <color name="app_theme">#ee4433</color>
     <color name="white">#FFFFFF</color>
     <color name="app_bg">#F6F6F6</color>
     <color name="app_bg2">#00000000</color>
