--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -42,7 +42,17 @@
             android:text="details_fragment" />
 
 
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16dp"
+            android:text="ddddddd"
+            android:textColor="#f00"
+            />
     </LinearLayout>
+
+
 
 
 </layout>
