--- a/jbase/src/main/res/layout/progress_loading_view.xml
+++ b/jbase/src/main/res/layout/progress_loading_view.xml
@@ -27,6 +27,15 @@
             app:cpBorderWidth="4dp"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
+            android:visibility="invisible"
             />
     </RelativeLayout>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@mipmap/news_list"
+        android:scaleType="center"
+        />
+
 </RelativeLayout>
