--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="details_fragment" />
+        <Button
+            android:id="@+id/details_c"
+            android:onClick="@{onclick.uiClick}"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="details_fragment" />
 
 
         <TextView
