--- a/jbase/src/main/res/layout/titrtie.xml
+++ b/jbase/src/main/res/layout/titrtie.xml
@@ -1,62 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/ll"
     android:layout_width="match_parent"
     android:layout_height="45dp"
-    android:id="@+id/ll"
+    android:background="#838383"
     >
 
-    <FrameLayout
-        android:layout_width="40dp"
-        android:layout_height="match_parent">
-
-        <ImageView
-            android:id="@+id/img_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="center"
-            android:src="@mipmap/icon_bac"
-            android:layout_gravity="center"
-            android:padding="10dp"
-            />
-
-
-    </FrameLayout>
-
+    <ImageView
+        android:id="@+id/img_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:scaleType="center"
+        android:src="@mipmap/icon_bac"
+        android:padding="10dp"
+        />
 
     <TextView
         android:id="@+id/tv_title"
         android:layout_weight="1"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:gravity="center"
         android:text=""
         android:textColor="#fff"
         android:textSize="17sp"
         android:textStyle="bold"
-        android:lines="1"
-        android:ellipsize="end"
+        android:singleLine="true"
+        android:maxEms="13"
         />
 
-    <FrameLayout
-        android:layout_width="50dp"
-        android:layout_height="match_parent">
-
-        <TextView
-            android:id="@+id/tv_title2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textColor="#fff"
-            android:textSize="16sp"
-            android:drawablePadding="10dp"
-            android:layout_gravity="center"
-            />
-
-
-    </FrameLayout>
+    <TextView
+        android:id="@+id/tv_title2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textColor="#fff"
+        android:textSize="15sp"
+        android:drawablePadding="10dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:padding="10dp"
+        />
 
 
+</android.support.constraint.ConstraintLayout>
 
-
-</LinearLayout>
