导航栏左侧新增一个按钮2

--- a/jbase/src/main/res/layout/layout_titles.xml
+++ b/jbase/src/main/res/layout/layout_titles.xml
@@ -43,7 +43,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:gravity="center"
-        android:text="55555555555555555555555555555555555555555555555555555555555555555555555555555555555555555555"
+        android:text=""
         android:textColor="#fff"
         android:textSize="17sp"
         android:textStyle="bold"
