--- a/jbase/src/main/res/layout/layout_titles.xml
+++ b/jbase/src/main/res/layout/layout_titles.xml
@@ -32,7 +32,7 @@
         app:layout_constraintLeft_toRightOf="@id/img_btn"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-
+         android:visibility="gone"
         />
 
     <TextView
