--- a/jbase/src/main/res/layout/layout_titles.xml
+++ b/jbase/src/main/res/layout/layout_titles.xml
@@ -46,7 +46,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:gravity="center"
         android:textColor="#fff"
-        android:textSize="17sp"
+        android:textSize="17dp"
         android:textStyle="bold"
         android:singleLine="true"
         android:maxEms="13"
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:text=""
         android:textColor="#fff"
-        android:textSize="15sp"
+        android:textSize="15dp"
         android:drawablePadding="10dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
